--- a/journal/202004.md
+++ b/journal/202004.md
@@ -8,15 +8,15 @@ _الصورة: جسر عمودي بواسطة saender@_
 
 أبرز أحداث شهر أبريل:
 
-- تستمر التحسينات لـ dcrd، والتي أصبحت أسرع بكثير حيث تم حظرها بواسطة الإصدارات القديمة، ويجب تحديث معايير الحظر.
+- تستمر التحسينات لـ dcrd، التي أصبحت أسرع بكثير لدرجة انها حُضِرت بواسطة الإصدارات القديمة، ويجب تحديث معايير الحظر.
 - نشر moo31337@ طلب سحب WIP للعمل على لامركزية إنفاق الخزينة.
-- نرحب بالمساهمين 5 الجدد في مستودعات جيتهوب لديكريد!
-- لقد كان شهرًا كبيرًا لعمليات الدمج، مع بوابتي Transak و Metal Pay. كما أضاف Steelbackup (حل التخزين المعدني لبذور DCR) خيارًا جديدًا للميزانية.
-- الفعاليات الشخصية متوقفة، ولكن الفعاليات الافتراضية مرتفعة، خاصة في أمريكا اللاتينية!
+- نرحب بالمساهمين الخمس الجدد  لمستودعات ديكريد على الجيتْهوب !
+- لقد كان شهرًا كبيرًا لعمليات الدمج، مع بوابتي Transak و Metal Pay. كما أضاف Steelbackup (حل التخزين المعدني لبَذْرَة DCR) خيارًا جديدًا منخفض التكلفة.
+- الفعاليات الشخصية متوقفة، ولكن الفعاليات الافتراضية باِزْدِيَاد، خاصة في أمريكا اللاتينية!
 
 ## التطوير
 
-ما لم يُذكر خلاف ذلك، فإن العمل الذي تم الإبلاغ عنه هنا يشتمل على حالة “الدمج إلى الرئيسي”. وهذا يعني أن العمل قد تم استكماله ومراجعته ودمجه في كود المصدر الذي يمكن للمستخدمين المتقدمين بناءه وتشغيله، ولكنه ليس متاحًا بعد في ثنائيات الإصدار للمستخدمين العاديين.
+ما لم يُذكر خلاف ذلك، فإن العمل المَذْكُور هنا يشتمل على حالة “الدمج إلى الرئيسي”. وهذا يعني أن العمل قد تم استكماله ومراجعته ودمجه في كود المصدر الذي يمكن للمستخدمين المتقدمين بناءه وتشغيله، ولكنه ليس متاحًا بعد في ثنائيات الإصدار للمستخدمين العاديين.
 
 [dcrd](https://github.com/decred/dcrd):
 
@@ -53,15 +53,15 @@ _الصورة: جسر عمودي بواسطة saender@_
 
 * [الخطوات](https://github.com/decred/decrediton/pull/2449) [الأولى](https://github.com/decred/decrediton/pull/2448) للترحيل إلى المكونات الوظيفية ([نهج](https://programmingwithmosh.com/react/react-functional-components/) أحدث في إطار عمل React - يسهل التفكير فيه واختباره)
 * إجراء جديد [للتخلي عن المعاملات](https://github.com/decred/decrediton/pull/2467) التي لا يتم تعدينها أو "العالقة"
-* [بدأت](https://github.com/decred/decrediton/pull/2457) في إعادة استخدام مكتبة واجهة مستخدم Pi لعدة مكونات للحصول على مظهر وأسلوب عرض متناسقين عبر مختلف منتجات ديكريد
+* [إسْتُهِلّ](https://github.com/decred/decrediton/pull/2457)  إعادة استخدام مكتبة واجهة مستخدم Pi لعدة مكونات للحصول على مظهر وأسلوب عرض متناسقين عبر مختلف منتجات ديكريد
 * [الخطوات](https://github.com/decred/decrediton/pull/2452) الأولى نحو [دعم CSPP](https://github.com/decred/decrediton/issues/2455)
 
 [بوليتيا](https://github.com/decred/politeia):
 
 * [طريقة](https://github.com/decred/politeia/pull/1137) جديدة للاستعلام عن بنود الفاتورة التي تمت فوترتها للاقتراح المحدد
-* [فصل](https://github.com/decred/politeia/pull/1175) بيانات التعريف عن مقترحات بوليتيا وفواتير نظام إدارة المتعاقد - يؤدي هذا إلى إزالة طريقة غير معهدة لتخزين عنوان المقترح الذي تم استخدامه مسبقًا ويسمح بإضافة بيانات تعريف عشوائية، بما في ذلك الحقول المطلوبة من خلال مقترحات طلب الإقتراح
+* [فصل](https://github.com/decred/politeia/pull/1175) بيانات التعريف عن مقترحات بوليتيا وفواتير نظام إدارة المتعاقد - يؤدي هذا إلى إزالة طريقة غير معهودة لتخزين عنوان المقترح الذي تم استخدامه مسبقًا ويسمح بإضافة بيانات تعريف عشوائية، بما في ذلك الحقول المطلوبة من خلال مقترحات طلب الإقتراح
 * جزء من العمل للسماح بعرض بوليتيا [دون جافا سكريبت](https://github.com/decred/politeiagui/pull/1833)
-* ظبط و إضافة [التخزين المؤقت](https://github.com/decred/politeiagui/pull/1844) لبيانات جدار الحماية
+* ضبط و إضافة [التخزين المؤقت](https://github.com/decred/politeiagui/pull/1844) لبيانات جدار الحماية
 * [الإنتهاء](https://github.com/decred/politeiagui/pull/1857) من [إعادة تصميم](https://github.com/decred/politeiagui/issues/1490) نظام إدارة الحالة
 * مجموعة من الأعمال على واجهة المستخدم لدعم [مقترحات RFP](https://github.com/decred/politeiagui/pull/1820)
 * عدة تعديلات على واجهة المستخدم لنظام إدارة المتعاقد
@@ -112,8 +112,8 @@ _الصورة: جسر عمودي بواسطة saender@_
 [dcrdata](https://github.com/decred/dcrdata):
 
 * [تحسينات](https://github.com/decred/dcrdata/pull/1690) وإعادة هيكلة [قاعدة البيانات](https://github.com/decred/dcrdata/pull/1720) للرسم البياني للعملات المختلطة
-* واجهة برمجة تطبيقات جديدة للاستعلام عن [وجود](https://github.com/decred/dcrdata/pull/1714) عنوان
-* واجهة برمجة تطبيقات بسيطة جديدة لإمدادات العملات [المتداولة](https://github.com/decred/dcrdata/pull/1697)
+* برمجة واجهة تطبيقات جديدة للاستعلام عن [وجود](https://github.com/decred/dcrdata/pull/1714) عنوان
+* برمجة واجهة التطبيقات بسيطة جديدة لإمدادات العملات [المتداولة](https://github.com/decred/dcrdata/pull/1697)
 * البحث عن [نقطة خارجية](https://github.com/decred/dcrdata/pull/1711) للمعاملة
 * إصلاحات الأخطاء
 
@@ -123,18 +123,18 @@ _الصورة: جسر عمودي بواسطة saender@_
 
 * [النماذج والإعدادات](https://github.com/decred/tinydecred/pull/156) اللازمة للاتصال ب dcrd
 * الدعم الأساسي [لمرشحات GCS](https://github.com/decred/tinydecred/pull/149)
-* زيادة تغطية الاختبار في [حملة](https://github.com/decred/tinydecred/issues/70) من أجل اختبار غير متسامح للحزمة البرمجيات 
+* زيادة تغطية الاختبار في [حملة](https://github.com/decred/tinydecred/issues/70) من أجل اختبار غير متسامح لحزمة البرمجيات 
 * تم ترحيل جميع الاختبارات إلى [pytest](https://github.com/decred/tinydecred/pull/161)
 * تعزيز أداء البدائل المشفرة باستخدام [Cython](https://github.com/decred/tinydecred/pull/160)، مما أدى إلى تقليل وقت تنفيذ الاختبار من 21 إلى 4 ثوانٍ (تسمح الاختبارات السريعة بالتطور الإنتاجي وهي متعة الحياة)
 
 [المستندات](https://github.com/decred/dcrdocs):
 
-* [إضافة](https://github.com/decred/dcrdocs/pull/1087) [صفحة](https://docs.decred.org/advanced/mnemonic-seed/) توثق الاختلافات بين بذور ديكريد و BIP-0039
+* [إضافة](https://github.com/decred/dcrdocs/pull/1087) [صفحة](https://docs.decred.org/advanced/mnemonic-seed/) توثق الاختلافات بين بذرة ديكريد و BIP-0039
 
 [decred.org](https://github.com/decred/dcrweb):
 
 * تحسينات في [وضع nojs](https://github.com/decred/dcrweb/pull/875)
-* تحديث المبادلات
+* تحديث منصات التبادل
 
 مسائل أخرى:
 
@@ -209,7 +209,7 @@ _الصورة: جسر عمودي بواسطة saender@_
 
 [أضافت](https://twitter.com/SwapSpaceCo/status/1250078395884539906) منصة التبادل الفوري [SwapSpace](https://swapspace.co/) دعم ديكريد.
 
-أضاف [Steelbackup](https://steelbackup.com/) وهو حل النسخ الاحتياطي للبذور المادية [إصدارًا خفيفًا](https://twitter.com/steelbackup/status/1248058631523905538) من المنتج. يوجد حاليًا نوعان من اللوحات الفولاذية: [منقوشة بالليزر](https://steelbackup.com/product/decred-laser-engraved/) و [موسومة بالليزر](https://steelbackup.com/product/decred-laser-marked/). والحديد المنقوش هو أكثر الحلول قوة حيث يتم إزالة الفولاذ مما يجعل شبكة الوسم دائمة كالفولاذ. ويتم وسم المنتج الموسوم بالليزر بواسطة محلول ديسولفيدي موليبدينوم مما يجعله مقاوما للخدوش والأحماض ودرجات الحرارة المرتفعة (حتى 340 درجة مئوية). المنتجات مصممة لتكون بسيطة مع عدم وجود أجزاء متحركة، يحتاج المستخدمون فقط إلى مثقاب (يتواجد في متجر معدات محلية) لدمج بذورهم. تم إطلاق SteelBackup في فبراير 2020 بواسطة zubair@ ويشحن لجميع أنحاء العالم.
+أضاف [Steelbackup](https://steelbackup.com/) وهو حل جِسْمانِيّ لنسخ الاحتياطي لبَذْرَة  [إصدارًا خفيفًا](https://twitter.com/steelbackup/status/1248058631523905538) من المنتج. يوجد حاليًا نوعان من اللوحات الفولاذية: [منقوشة بالليزر](https://steelbackup.com/product/decred-laser-engraved/) و [موسومة بالليزر](https://steelbackup.com/product/decred-laser-marked/). والحديد المنقوش هو أكثر الحلول قوة حيث يتم إزالة الفولاذ مما يجعل شبكة الوسم دائمة كالفولاذ. ويتم وسم المنتج الموسوم بالليزر بواسطة محلول ديسولفيدي موليبدينوم مما يجعله مقاوما للخدوش والأحماض ودرجات الحرارة المرتفعة (حتى 340 درجة مئوية). المنتجات مصممة لتكون بسيطة مع عدم وجود أجزاء متحركة، يحتاج المستخدمون فقط إلى مثقاب (يتواجد في متجر معدات محلية) لدمج بذرتِهم. تم إطلاق SteelBackup في فبراير 2020 بواسطة zubair@ ويشحن لجميع أنحاء العالم.
 
 تحذير: ليس لدى مؤلفي مجلة ديكريد أي فكرة عن مصداقية أي من الخدمات المذكورة أعلاه. يرجى إجراء البحوث الخاصة بك قبل الوثوق بمعلوماتك الشخصية أو الأصول إلى أي كيان.
 
@@ -270,7 +270,7 @@ _الصورة: لا يوجد نقص في ستايكي في أمريكا اللا
 * عقلية المصادر المفتوحة للتمويل بواسطة Phoenix Green على ([medium](https://medium.com/@kencameron77/open-sourced-finance-7ce8a3fdb648)) - يدعو إلى التفكير بشكل جماعي والعثور على أسس مشتركة، ويسرد أدوات لبناء مجتمع
 * 3 أشياء يجب أن يعرفها الجميع عن العملات الرقمية بواسطة Phoenix Green على ([medium](https://medium.com/@kencameron77/3-things-everyone-should-know-about-cryptocurrencies-e38c3db4127b))
 * الآلة الزمنية للبتكوين بواسطة Phoenix Green على ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - مقارنة البتكوين مع ديكريد
-* ماذا لو كان لدى بتكوين خزينة؟ ريان واتكينز على ([messari.io](https://messari.io/article/what-if-bitcoin-had-a-treasury)، محمي بنظام حظر الاشتراك غير المدفوع)
+* ماذا لو كان لدى بتكوين خزينة؟ ريان واتكينز على ([messari.io](https://messari.io/article/what-if-bitcoin-had-a-treasury)، محمي بدفع اشتراك محدد)
 * مقابلة Project Rundown مع ديكريد بواسطة The Capital (مجلة عملات بديلة سابقة، [medium](https://medium.com/the-capital/project-rundown-interview-with-decred-on-the-capital-8b647919a339))
 * لنتحدث عن ديكريد و العمل عن بعد بواسطة adcade@ (بالإسبانية، [medium](https://medium.com/decred-es/hablemos-decred-sobre-el-proyecto-y-sobre-el-trabajo-remoto-e5a2510364ae))
 * مقالة عن اللقاء الافتراضي الرابع المقرر حول المبادلات المركزية والمبادلات اللامركزية (بالإسبانية، [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-organizes-virtual-meeting-on-decentralized-exchanges-for-the-spanish-speaking-community))
