--- a/journal/202004.md
+++ b/journal/202004.md
@@ -6,7 +6,7 @@ _الصورة: جسر عمودي بواسطة saender@_
 
 أبرز أحداث شهر أبريل:
 
-- تستمر التحسينات لـ dcrd، التي أصبحت أسرع بكثير لدرجة انها حُضِرت بواسطة الإصدارات القديمة، ويجب تحديث معايير الحظر.
+- تستمر التحسينات لـ dcrd، التي أصبحت أسرع بكثير لدرجة انها حُظِرت بواسطة الإصدارات القديمة، ويجب تحديث معايير الحظر.
 - نشر moo31337@ طلب سحب WIP للعمل على لامركزية إنفاق الخزينة.
 - نرحب بالمساهمين الخمس الجدد  لمستودعات ديكريد على الجيتْهوب !
 - لقد كان شهرًا كبيرًا لعمليات الدمج، مع بوابتي Transak و Metal Pay. كما أضاف Steelbackup (حل التخزين المعدني لبَذْرَة DCR) خيارًا جديدًا منخفض التكلفة.
