--- a/journal/202005.md
+++ b/journal/202005.md
@@ -9,8 +9,8 @@ _الصورة: بتات تصاعدية بواسطة saender@_
 أبرز أحداث شهر ماي:
 
 * تم تقديم برنامج vspd الجديد، والذي سيحل محل برنامج dcrstakepool الحالي المستخدم من قبل مشغلي موفري خدمة التصويت، وسيحسن بشكل كبير تجربة التحصيص بإستعمال موفر خدمة التصويت لجميع المستخدمين بمجرد إصدار النسخة 1.6 عن طريق إلغاء متطلبات حسابات مستخدمي موفر خدمة التصويت VSP.
-* برنامج المبادلات اللامركزية DEX لديكريد في اختبار مفتوح، إذا كانت تتملكك روح المغامرة، فلما لا تقوم بالمقايضة الذرية لبعض الإعتمادات على الشبكة التجريبية؟
-* مكونات جديدة مهمة من بوليتيا تعود إلى مكانها الصحيح، مقترح طلب الإقتراحات، و في جانب نظام إدارة المتعاقد، جميع وظائف التصويت للمتعاقدين.
+* برنامج المبادلات اللامركزية DEX لديكريد في اختبار مفتوح، إذا كانت تمتلك روح المغامرة، فلما لا تقوم بالمقايضة الذرية  بستخدام وحدات الشبكة التجريبية؟
+* مكونات مهمة و جديدة لبوليتيا قَرُبَ الإنتهاء منها، كمقترح طلب الإقتراحات، و في جانب نظام إدارة المتعاقد إضافة خاصية التصويت.
 * تتوفر الآن إصدارات الاختبار لتحديثات النسخة 1.5 من تطبيقي الهاتف المحمول من خلال متاجر التطبيقات المعنية - جميع المختبرين مرحب بهم لإرسال المشاكل على الجيتهوب.
 
 ## التطوير
