--- a/journal/202005.md
+++ b/journal/202005.md
@@ -1,5 +1,3 @@
-<div dir="rtl">
-
 # صحيفة ديكريد لشهر ماي 2020
 
 ![abstract art](../img/journal-202005-384.png)
@@ -9,7 +7,7 @@ _الصورة: بتات تصاعدية بواسطة saender@_
 أبرز أحداث شهر ماي:
 
 * تم تقديم برنامج vspd الجديد، والذي سيحل محل برنامج dcrstakepool الحالي المستخدم من قبل مشغلي موفري خدمة التصويت، وسيحسن بشكل كبير تجربة التحصيص بإستعمال موفر خدمة التصويت لجميع المستخدمين بمجرد إصدار النسخة 1.6 عن طريق إلغاء متطلبات حسابات مستخدمي موفر خدمة التصويت VSP.
-* برنامج المبادلات اللامركزية DEX لديكريد في اختبار مفتوح، إذا كانت تمتلك روح المغامرة، فلما لا تقوم بالمقايضة الذرية  بستخدام وحدات الشبكة التجريبية؟
+* برنامج المبادلات اللامركزية DEX لديكريد في اختبار مفتوح، إذا كانت تمتلك روح المغامرة، فلما لا تقوم بالمقايضة الذرية  بإستخدام وحدات الشبكة التجريبية؟
 * مكونات مهمة و جديدة لبوليتيا قَرُبَ الإنتهاء منها، كمقترح طلب الإقتراحات، و في جانب نظام إدارة المتعاقد إضافة خاصية التصويت.
 * تتوفر الآن إصدارات الاختبار لتحديثات النسخة 1.5 من تطبيقي الهاتف المحمول من خلال متاجر التطبيقات المعنية - جميع المختبرين مرحب بهم لإرسال المشاكل على الجيتهوب.
 
@@ -357,5 +355,3 @@ Suprnova بنسبة 0.02%، وأخرى بنسبة ~28%.
 النسخة الأصلية لمجلة الديكريد لشهر ماي متوفرة على هذا الرابط [هنا](https://github.com/xaur/decred-news/blob/master/journal/202005.md)
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
-
-</div>
