--- a/journal/202006.md
+++ b/journal/202006.md
@@ -350,7 +350,7 @@ Suprnova بنسبة 0.02%، وأخرى بنسبة ~15%.
 
 ![photo](../img/pl-mountains-360.jpg "@LolekBolek74 enjoying DCR in Polish mountains")
 
-_الصورة: يتمتع LolekBolek74@ ب DCR في [الجبال] البولندية_
+_الصورة: يتمتع LolekBolek74@ ب DCR في [الجبال](https://twitter.com/LolekBolek74/status/1269333625352396800) البولندية_
 
 ## الأسواق
 
