--- a/journal/202007.md
+++ b/journal/202007.md
@@ -8,11 +8,11 @@ _الصورة: أبراج متتابعة بواسطة saender@_
 
 أبرز أحداث شهر يوليوز:
 
-* ستستخدم الموافقة اللامركزية على معاملات الخزينة، التي من المنتظر أن تقدم لها مقترحات تغيير ديكريد، توقيعات شنور، ويجري حاليا استعراض التنفيذ.
-* شهدت بوليتيا نشر جولة من الميزات الجديدة المهمة، بما في ذلك طلب مقترحات والوضع الليلي.
-* تلقى vspd آخر تغيير رئيسي احتاجه ، ويتم اختباره على شبكة الإختبار وقريبًا سيتم إختباره على الشبكة الرئيسية.
-* كان هناك المزيد من التقدم نحو تشغيل dcrlnd في نظام التحقق من الدفع البسيط، و تحديث ضخم لقاعدة الكود لمضاهاة النسخة الجديدة ل lnd.
-* ازدادت مناقشة نشاط التواصل المجتمعي بشكل كبير عبر قنوات الريديت والماتريكس والديسكورد - مع زيادة مقابلة في عدد المقترحات المتعلقة بالتسويق والتي تظهر على بوليتيا.
+* لامركزية الموافقة على معاملات الخزينة والتي سوف تؤدي الى قدوم مقترح تغيير ديكريد المنتظر و توقيعات شنور، كلها حاليا قيد التنقيح.
+* شهدت منصة بوليتيا إضافة مجموعة من المزايا الجديدة المهمة، بما في ذلك طلب مقترحات والوضع الليلي. وتمت اضافة خاصية المساءلة في نظام ادارة المتعاقد
+* تلقى vspd آخر تغيير رئيسي يحتاجه ، ويتم حاليا اختباره على شبكة الإختبار وقريبًا سيتم إختباره على الشبكة الرئيسية.
+* كان هناك المزيد من التقدم نحو تشغيل dcrlnd في نظام التحقق البسيط من الدفع، و تحديث ضخم لقاعدة الكود لمضاهاة النسخة الجديدة ل lnd.
+* ازدادت حواراة نشاط التواصل المجتمعي بشكل كبير عبر قنوات الريديت والماتريكس والديسكورد - مع زيادة مقابلة في عدد المقترحات المتعلقة بالتسويق والتي تظهر على بوليتيا.
 
 ## التطوير
 
@@ -45,8 +45,8 @@ _الصورة: أبراج متتابعة بواسطة saender@_
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
-* إضافة معلمة [gaplimit](https://github.com/decred/dcrwallet/pull/1761) اختيارية إلى أمر `discoverusage`
-* إضافة معلمة [حساب](https://github.com/decred/dcrwallet/pull/1767) اختيارية إلى الأمر `listunspent`
+* إضافة مُعامل [gaplimit](https://github.com/decred/dcrwallet/pull/1761) اختيارية إلى أمر `discoverusage`
+* إضافة مُعامل [حساب](https://github.com/decred/dcrwallet/pull/1767) اختيارية إلى الأمر `listunspent`
 * تنفيذ طريقة [`ticketinfo`](https://github.com/decred/dcrwallet/pull/1783) التي توفر معلومات مفصلة عن الحالة فيما يتعلق بجميع تذاكر المحفظة (مطلوبة لـ vspd)
 * إضافة [معلمات](https://github.com/decred/dcrwallet/pull/1780) CoinJoin إلى استدعاء `PurchaseTicketRequest`
 * تنفيذ الأمر [`getpeerinfo`](https://github.com/decred/dcrwallet/pull/1797) في وضع SPV
@@ -68,7 +68,7 @@ _الصورة: أبراج متتابعة بواسطة saender@_
 
 [بوليتيا](https://github.com/decred/politeia):
 
-تم نشر العديد من [الميزات](https://twitter.com/lukebp_/status/1285955294703411201) الجديدة في موقع [proposals.decred.org](https://proposals.decred.org/): عملية طلب الإقتراحات، عرض مسطح للتعليقات (يساعد على اكتشاف التعليقات الجديدة بسرعة دون تعقبها في سلسلة الرسائل)، الوضع الليلي، عناوين URL قصيرة للمقترحات، وتغيير لحظر نشر التعليقات مرة واحدة في اليوم بدلاً من مرة واحدة في الساعة (حل بديل لتحديد سيتم إصلاحه بالترحيل إلى الخلفية في سجل tlog).
+تم نشر العديد من [الميزات](https://twitter.com/lukebp_/status/1285955294703411201) الجديدة في موقع [proposals.decred.org](https://proposals.decred.org/): عملية طلب الإقتراحات، عرض مسطح للتعليقات (يساعد على اكتشاف التعليقات الجديدة بسرعة دون تعقبها في سلسلة الرسائل)، الوضع الليلي، عناوين URL قصيرة للمقترحات، وتغيير لحظر نشر التعليقات مرة واحدة في اليوم بدلاً من مرة واحدة في الساعة (حل بديل للمشكلة سيتم إصلاحها بالترحيل إلى الخلفية في سجل tlog).
 
 التغييرات المدمجة:
 
@@ -109,7 +109,7 @@ CMS:
 * تحسين محفظة [قفل العملات](https://github.com/decred/dcrdex/pull/525) التي تمول الطلبات، وخاصة لمقايضة السلاسل
 * وظائف إدارة الخادم الإضافية: [الحظر](https://github.com/decred/dcrdex/pull/469)، و[إلغاء الحظر](https://github.com/decred/dcrdex/pull/479)، و[الإشعار](https://github.com/decred/dcrdex/pull/555)، و[إشعار الكل](https://github.com/decred/dcrdex/pull/534)
 * بالنسبة للطلبات التي تحتوي على تطابقات ملغاة (الفاشلة)، يتم [إلغاء حجز الطلب](https://github.com/decred/dcrdex/pull/475) تلقائيًا ويتم إعلام العملاء
-* مخطط قاعدة بيانات العملاء أصبح الآن مجزءا، مع بنية تحتية [متطورة](https://github.com/decred/dcrdex/pull/448) للتغييرات المستقبلية
+* مخطط قاعدة بيانات العملاء أصبح الآن مجزأ، مع بنية تحتية [متطورة](https://github.com/decred/dcrdex/pull/448) للتغييرات المستقبلية
 * يعيد العميل الآن تلقائياً [الاشتراك](https://github.com/decred/dcrdex/pull/503) في موجز دفتر الطلب بعد إعادة الاتصال بالخادم
 * توفر واجهة سطر أوامر العميل الآن [دفتر الطلبات](https://github.com/decred/dcrdex/pull/496)
 * [يمنع](https://github.com/decred/dcrdex/pull/527) العميل الإغلاق العرضي بطلبات ومقايضات نشطة
@@ -166,7 +166,7 @@ godcr هي محفظة التحقق البسيط للدفع عبر منصة Pure-
 
 \* تم تحديث غرف الدردشة في 9 يوليوز، أنظر [مناقشات المجتمع](https://xaur.github.io/decred-news/journal/202007.html#community-discussions) للحصول على التفاصيل.
 
-يمكنك رؤية الرسوم البيانية لكافة نقاط بيانات الوسائط الاجتماعية الواردة فيمجلة ديكريدل والمزيد [هنا](https://github.com/xaur/social-media-data/blob/graphs/graphs/index.md) (البيانات الأولية موجودة في نفس المستودع). مورد جيد آخر هو صفحة [إحصائيات المجتمع](https://dcrextdata.planetdecred.org/community) لمشروع dcrextdata - فهو يتتبع عددًا أقل من الحسابات ولكنه يحتوي على دقة بيانات أفضل ومخططات تفاعلية.
+يمكنك رؤية الرسوم البيانية لكافة نقاط بيانات التواصل الاجتماعية الواردة في مجلة ديكريد والمزيد [هنا](https://github.com/xaur/social-media-data/blob/graphs/graphs/index.md) (البيانات الأولية موجودة في نفس المستودع). مورد جيد آخر هو صفحة [إحصائيات المجتمع](https://dcrextdata.planetdecred.org/community) لمشروع dcrextdata - فهو يتتبع عددًا أقل من الحسابات ولكنه يحتوي على دقة بيانات أفضل ومخططات تفاعلية.
 
 ## الإدارة و الحوكمة
 
@@ -176,7 +176,7 @@ godcr هي محفظة التحقق البسيط للدفع عبر منصة Pure-
 
 * تمت الموافقة على [الاقتراح](https://proposals.decred.org/proposals/c81926b) من lindseymmc@ الخاص باستمرار خدمات العلاقات العامة ب 3,500 دولار شهرياً لمدة عام واحد، مع تأييد 90% (نسبة المشاركة 25%)، وذلك بعد الموافقة على الاقتراح الأول بنسبة 72%.
 * [اقتراح](https://proposals.decred.org/proposals/dedf452074752d7e29304a0566643feb26d1d130596e04c613e15de113ac2d08) لإنفاق 15,000 دولار لإنشاء ملصقات الواقع المعزز.
-* [اقتراح](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) لتغطية الإشراف على الماتريكس، الديسكورد، التيليجرام و بوليتيا، الحد الأقصى المتوقع هو 9,000 دولار أمريكي مع 4,800 دولار أمريكي لمدة 6 أشهر. ويجري بالفعل إنجاز هذا العمل ودفع تكاليفه، والمقترح هو لإضفاء الطابع الرسمي على هذا العمل ووضع حد للمبلغ الذي يمكن دفعه.
+* [اقتراح](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) لتغطية الإشراف على الماتريكس، الديسكورد، التيليجرام و بوليتيا، الحد الأقصى  9,000 دولار أمريكي والمتوقع هو 4,800 دولار أمريكي لمدة 6 أشهر. ويجري بالفعل إنجاز هذا العمل ودفع تكاليفه، والمقترح هو لإضفاء الطابع الرسمي على هذا العمل ووضع حد للمبلغ الذي يمكن دفعه.
 * [اقتراح](https://proposals.decred.org/proposals/2dcbc3e14c06c6e84449f5e2756b944d5ed23be41c23a9f5225f3eef424ce0ae) لتقديم DCR كخيار دفع على موقعين إلكترونيين لحجز السفر (30 ألف دولار)، بالإضافة إلى بعض الأنشطة الترويجية (21.5 ألف دولار).
 * [اقتراح](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) إنفاق 10 آلاف دولار على مجموعة من الأنشطة التسويقية (بما في ذلك إعادة التغريد / التأييد والإعلانات المدفوعة) - [منشور](https://www.reddit.com/r/decred/comments/hzo3yu/creating_a_decred_marketing_workgroup/) ريديت المرتبط.
 * [اقتراح](https://proposals.decred.org/proposals/4f81031) لإنشاء 20 ميما على وسائل التواصل الاجتماعي 10 DCR لكل ميم
@@ -201,7 +201,7 @@ Coinmine بنسبة 0.03%،
 Suprnova بنسبة 0.02%، وأخرى بنسبة ~26%.
 أرقام توزيع التجمع تقريبية ولا يمكن تحديدها بدقة.
 
-التحصيص: بلغ متوسط سعر التذكرة [لمدة 30 يوما](https://dcrstats.com/) 144.3 DCR (بزيادة 4.9). وتفاوت [السعر](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kc0s5ehh-kdbsef8t&bin=window&axis=time&visibility=true-false&mode=stepped) بين 137.1 و 155.5 DCR. وقد بلغ [المبلغ المقفل](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kc0s5ehh-kdbsef8t&bin=day&axis=time) 5.75-5.88 مليون DCR، وهو ما يعادل 48.98-50.06% من العرض المتاح [المشاركة](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kc0s5ehh-kdbsef8t&bin=day&axis=time) في إثبات الحصة.
+التحصيص: بلغ متوسط سعر التذكرة [لمدة 30 يوما](https://dcrstats.com/) 144.3 DCR (بزيادة 4.9). وتفاوت [السعر](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kc0s5ehh-kdbsef8t&bin=window&axis=time&visibility=true-false&mode=stepped) بين 137.1 و 155.5 DCR. وقد بلغ [المبلغ المقفل](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kc0s5ehh-kdbsef8t&bin=day&axis=time) 5.75-5.88 مليون DCR، وهو ما يعادل 48.98-50.06% من العرض المتاح [للمشاركة](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kc0s5ehh-kdbsef8t&bin=day&axis=time) في إثبات الحصة.
 
 العقد: طوال شهر [يوليوز](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1593561600000&to=1596240000000)، كان هناك ما متوسطه 134 عقد استماع عام و 241 عقدة إجمالية حسب dcr.farm. تم توزيع الإصدارات في شهر يوليوز، في المتوسط، على النحو التالي: 51% يشغلون dcrd النسخة 1.5.1، و10% dcrd النسخة 1.5، 6% يشغلون نسخة التطوير 1.6 وبناء إصدارات الترشيح، 5% يستخدمون dcrd النسخة 1.5 لبناء التطوير و إصدارات الترشيح، 1.3% يشغلون dcrd النسخة 1.4، 7% يشغلون dcrwallet النسخة 1.5.1، و 0.6% يشغلون dcrwallet النسخة 1.4 و 1% يشغلون dcrwallet النسخة 1.5 و 18% يشغلون أخرى.
 
@@ -211,7 +211,7 @@ Suprnova بنسبة 0.02%، وأخرى بنسبة ~26%.
 
 * أضافت Binance أزواج [DCR/BUSD](https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596) و [DCR/USDT](https://www.binance.com/en/support/articles/043fc71cdcce4fcfbdae133d8d0f35aa) في غضون أسابيع بينهم.
 
-* في الأصل ، قام موقع [بإدارج](https://twitter.com/XTexchange/status/1062529195094339584) DCR في نونبر 2018، والآن أصبح لديهم تداول DCR مقابل [USDT](https://twitter.com/XTexchange/status/1281867070653816832) ووضع الرافعة الاستدانة.
+* في الأصل ، قام موقع XT.com [بإدارج](https://twitter.com/XTexchange/status/1062529195094339584) DCR في نونبر 2018، والآن أصبح لديهم تداول DCR مقابل [USDT](https://twitter.com/XTexchange/status/1281867070653816832) ووضع الرافعة الاستدانة.
 
 * و أخيرًا، لم تعد ديكريد "تفرعا للبتكوين" على [CoinMarketCap](https://coinmarketcap.com/currencies/decred/).
 
@@ -227,14 +227,14 @@ Suprnova بنسبة 0.02%، وأخرى بنسبة ~26%.
 
 شهد موضوع التسويق نقاشًا كبيرًا على الريديت و الماتريكس، وعلى وجه التحديد الدور الذي يجب أن تلعبه الخزينة في مشروع لامركزي مثل الديكريد في هذا.
 
-عمل Checkmate@ على إثارة قدر من التوعية وغيرها من الأفكار على الريديت، مع منشورات منتظمة و غير منتظمة تثير النقاش الذي امتد أيضًا إلى بعض مشاركات المناقشة الأخرى المتعلقة بالتسويق. ثالثي الإنتشار لهذا الشهر:
+عمل Checkmate@ على إثارة قدر من التوعية وغيرها من الأفكار على الريديت، مع منشورات منتظمة و غير منتظمة تثير النقاش الذي امتد أيضًا إلى بعض مشاركات المناقشة الأخرى المتعلقة بالتسويق.
 
 اللقطات القليلة من الأفكار حول جهود التواصل لهذا الشهر:
 
-* نشر mrbulb@ [ورشة عمل يوم الأربعاء](https://www.reddit.com/r/decred/comments/hj7n52/what_is_decred_workshopwednesday/)، حيث دعا الناس لاستكشاف المراحل الرئيسية الأربعة لتطوير السرد معه.
+* نشر mrbulb@ [ورشة عمل يوم الأربعاء](https://www.reddit.com/r/decred/comments/hj7n52/what_is_decred_workshopwednesday/)، حيث دعا الناس لاستكشاف المراحل الرئيسية الأربعة لتطوير لسرد معه.
 * المخططات المستقبلية ليوم الجمعة (FTF) 3 يوليوز - [العمل الفني](https://www.reddit.com/r/decred/comments/hkfj1r/forward_thinking_friday_decred_artwork_03_july/) لديكريد، تطوير مفهوم مسابقة فنية.
-* الأحد التشكيكي، 5 يوليوز، أخدا بعين الإعتبار الأجهزة الصلبة و التحصيص، jy-p@ على [معرفة](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3/) بمطور جديد يهتم بهذه الأمور، تميزت هذه النسخة أيضًا[ بالغضب الملحمي](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21/) من أحد المشاركين في الإسقاط الجوي الذي ارتد بين DCR و XMR على مر السنين، و بدأ في التحصيص في عام 2019 و لكنه توقف الآن. تم طرح العديد من الأسئلة بواسطة bee@ عن بعد المزاعم المفاجئة و التي قام jy-p@ [بدحضها](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3j2j6/).
-* المخططات المستقبلية ليوم الجمعة 10 يوليوز - أجريت [مناقشة](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) حول إحضار بيانات DCR إلى الحياة لعدد أكبر من الأشخاص وإظهار سلسلة ديكريد والمقدمة بطريقة صحيحة، بالإضافة إلى مغنو الراب والكتابة على الجدران وبعض الشكوك التي تمت مشاركتها في اليوم الخطأ.
+* الأحد التشكيكي، 5 يوليوز، أخدا بعين الإعتبار الأجهزة الصلبة و التحصيص، jy-p@  [يعرف](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx38dq3/) مطور يهتم بهذه الأمور، تميزت هذه النسخة أيضًا[ بالغضب الملحمي](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx2xh21/) من أحد المشاركين في الإسقاط الجوي الذي ارتد بين DCR و XMR على مر السنين، و بدأ في التحصيص في عام 2019 و لكنه توقف الآن. تم طرح العديد من الأسئلة بواسطة bee@ عن بعد المزاعم المفاجئة و التي قام jy-p@ [بدحضها](https://www.reddit.com/r/decred/comments/hluve9/decred_skepticism_sunday_05_july_2020/fx3j2j6/).
+* المخططات المستقبلية ليوم الجمعة 10 يوليوز - أجريت [مناقشة](https://www.reddit.com/r/decred/comments/homdwc/forward_thinking_friday_10_july_2020/) حول إحضار بيانات DCR إلى الحياة لعدد أكبر من الأشخاص وإظهار سلسلة ديكريد والمقدمة بطريقة صحيحة، بالإضافة إلى مغنو الراب والكتابة على الجدران وبعض الشكوك التي تمت مشاركتها في اليوم الخاطئ.
 * الأحد التشكيكي 12 يوليوز - [الاستيلاء](https://www.reddit.com/r/decred/comments/hpsgye/decred_skepticism_sunday_12_july_2020/) على الحوكمة وفقدان "العملة" للتركيز من الرسائل.
 * المخططات المستقبلية ليوم الجمعة 17 يوليوز - تم التطرق إلى موضوع [الفوارق](https://www.reddit.com/r/decred/comments/ht4r8a/forward_thinking_friday_differentiators_17_july/)، والنظر في الطرق المختلفة التي تتميز بها الديكريد.
 * الأحد التشكيكي 19 يوليوز - العملات النقدية على المنحدر، [تغليف](https://www.reddit.com/r/decred/comments/htuac8/decred_skepticism_sunday_19_july_2020/) DCR في ETH.
@@ -328,7 +328,7 @@ _الصورة: [النقش على الخشب](https://twitter.com/aithzakaria1/s
 
 ## مناقشات المجتمع
 
-خبار أنظمة المجتمع:
+أخبار أنظمة المجتمع:
 
 * تم تحديث معظم غرف الماتريكس إلى الإصدار 5، والذي يجب أن يحل بعض أخطاء حالة الحافة عند الانضمام إلى الغرف. ونظرًا لأن أعضاء الغرفة القديمة لا ينضمون تلقائيًا إلى الغرفة الجديدة (يجب أن يقبلوا دعوة)، فإن إحدى نتائج الترقية هي انخفاض حاد في عدد المستخدمين (على سبيل المثال، انتقل general# من 622 إلى 124). من ناحية أخرى، يكشف هذا عن عدد المستخدمين النشطين خلال الأسابيع الثلاثة الماضية.
 * أخيرًا، أصبحت غرفة الدردشة showerthoughts# هنا، المكان المناسب لتخليص نفسك من الأفكار الغير تقليدية. يصر matheusd@ على أن تقدم الأفكار طازجة، خالية من الأعباء بسبب التدقيق المفرط أو المنطق.
