--- a/journal/202007.md
+++ b/journal/202007.md
@@ -12,7 +12,7 @@ _الصورة: أبراج متتابعة بواسطة saender@_
 * شهدت منصة بوليتيا إضافة مجموعة من المزايا الجديدة المهمة، بما في ذلك طلب مقترحات والوضع الليلي. وتمت اضافة خاصية المساءلة في نظام ادارة المتعاقد
 * تلقى vspd آخر تغيير رئيسي يحتاجه ، ويتم حاليا اختباره على شبكة الإختبار وقريبًا سيتم إختباره على الشبكة الرئيسية.
 * كان هناك المزيد من التقدم نحو تشغيل dcrlnd في نظام التحقق البسيط من الدفع، و تحديث ضخم لقاعدة الكود لمضاهاة النسخة الجديدة ل lnd.
-* ازدادت حواراة نشاط التواصل المجتمعي بشكل كبير عبر قنوات الريديت والماتريكس والديسكورد - مع زيادة مقابلة في عدد المقترحات المتعلقة بالتسويق والتي تظهر على بوليتيا.
+* ازدادت حوارات نشاط التواصل المجتمعي بشكل كبير عبر قنوات الريديت والماتريكس والديسكورد - مع زيادة مقابلة في عدد المقترحات المتعلقة بالتسويق والتي تظهر على بوليتيا.
 
 ## التطوير
 
