--- a/journal/202008.md
+++ b/journal/202008.md
@@ -9,14 +9,14 @@ _الصورة: ثنائي الاتجاه بواسطة saender@_
 الأحداث البارزة لشهر غشت:
 
 * تم إصدار رقعة لإصدار 1.5.2 لإصلاح ناقل محتمل لرفض الخدمة.
-* يصل عدد أعضاء فريق dcrdex إلى 6 أعضاء نشطين، و لابد أنهم يعملون بسرعة من خلال لوحات المفاتيح بحيث أنهم دمجوا أكثر من 50 طلب سحب في الشهر، مما  أدى إلى التخلص من الأخطاء والحالات الهامشية عند الكشف عنها عند الاختبار.
+* يصل عدد أعضاء فريق dcrdex إلى 6 أعضاء نشطين، و لابد أنهم يعملون بسرعة من خلال لوحات المفاتيح بحيث أنهم دمجوا أكثر من 50 طلب سحب في الشهر، مما  أدى إلى التخلص من الأخطاء والحالات الهامشية التي اكتشفت من خلال الاختبار.
 * إنتهت مراجعة طلب السحب للخزينة اللامركزية ويجري تطبيق اللمسات الأخيرة.
 * تلقى vspd بعض الصقل وانتقل العمل الآن على إدماجه في ديكريديتون و dcrwallet.
-* أصبحت العناصر الرئيسية لتحويل بوليتيا إلى tlog مهيأة الآن، و بمجرد اكتمال بعض إعادة البناء لاستيعاب هذه العمليات، سيبدأ الاختبار.
+* أصبحت الآن العناصر الرئيسية لتحويل بوليتيا إلى tlog مهيأة ، و بمجرد اكتمال بعض إعادة البناء لاستيعاب هذه العمليات، سيبدأ الاختبار.
 
 ## إصدار نسخة التصحيح 1.5.2
 
-يغلق هذا الإصدار رفضًا محتملاً لمتجه الخدمة. يُنصح الأشخاص الذين يديرون العقد الخاصة بهم إضافة إلى معدني إثبات العمل القيام بالتحديث.
+يغلق هذا الإصدار ناقل محتمل لرفض الخدمة. يُنصح الأشخاص الذين يديرون العقد الخاصة بهم إضافة إلى معدني إثبات العمل القيام بالتحديث.
 
 تتوفر [هنا](https://github.com/decred/decred-binaries/releases/tag/v1.5.2) ثنائيات جديدة  لـ dcrd و Decrediton. تأكد من [التحقق منها](https://docs.decred.org/advanced/verifying-binaries/) — أصبحت الإرشادات أكثر تفصيلاً ومألوفة الآن.
 
@@ -60,7 +60,7 @@ _الصورة: ثنائي الاتجاه بواسطة saender@_
 
 [ديكريديتون](https://github.com/decred/decrediton):
 
-* دعم إضافي لتشغيل محفظة الشبكة البرقية مع المحفظة الأساسية في [وضع التحقق من الدفع البسيط SPV](https://github.com/decred/decrediton/pull/2629) وتمكين التحقق البسيط من الدفع افتراضيًا
+* دعم إضافي لتشغيل محفظة الشبكة البرقية مع المحفظة الأساسية في [وضع التحقق البسيط من الدفع  SPV](https://github.com/decred/decrediton/pull/2629) وتمكين التحقق البسيط من الدفع افتراضيًا
 * إضافة الدعم لاستعادة المحافظ ذات [الحسابات المختلطة](https://github.com/decred/decrediton/pull/2565)
 * [استعادة](https://github.com/decred/decrediton/pull/2604) الكود القديم المعاد تصميمه لدعم نماذج التحصيص القديمة والجديدة
 * مواصلة التحديث لاستخدام المكونات الوظيفية وcustom hooks ووحدات CSS النمطية
@@ -207,7 +207,7 @@ _الصورة: ثنائي الاتجاه بواسطة saender@_
 * تمت الموافقة على [إقتراح](https://proposals.decred.org/proposals/1dc1571) تمويل مجال التصميم لتغطية 6 أشهر من العمل في المجالات الفرعية لواجهة المستخدم/تجربة المستخدم (35 ألف دولار) والهوية (16 ألف دولار) والاتصالات المرئية (14 ألف دولار)، وذلك من خلال تصويت 80% بنعم و25% من المشاركة
 * تمت الموافقة على [اقتراح](https://proposals.decred.org/proposals/32cba00) بمواصلة الدفع لمشرفي بوليتيا و الماتريكس و الديسكورد و والتيليجرام (بحد أقصى 9 آلاف دولار على مدار 6 أشهر) بنسبة 73٪ من الأصوات المؤيدة وإقبال الناخبين بنسبة 29٪
 * تم رفض [اقتراح](https://proposals.decred.org/proposals/2dcbc3e) دفع 50 ألف دولار مقابل حملات الدمج والترويج على موقعين لحجز السفر بموافقة 15٪ ونسبة إقبال الناخبين 24٪
-* تم نشر [اقتراح](https://proposals.decred.org/proposals/1e55a41) جديد لإنتاج الفيديو من طرف في أوائل شتنبر
+* تم نشر [اقتراح](https://proposals.decred.org/proposals/1e55a41) جديد لإنتاج الفيديو من طرف @Exitus في أوائل شتنبر
 * كما شهد أوائل شتنبر نشر أول [اقتراح](https://proposals.decred.org/proposals/91becea) بطلب تقديم المقترحات، ويهدف إلى تغيير الرسائل على موقع الديكريد. ويدعو المقترحات التي يجب إجراء التغييرات عليها
 
 تم التخلي عن أربعة مقترحات: [ملصقات الواقع المعزز](https://proposals.decred.org/proposals/dedf452) و[التسويق بواسطة fst_nml@](https://proposals.decred.org/proposals/3372cfc)، و [الميمات على وسائل الإعلام](https://proposals.decred.org/proposals/4f81031) و [سلاسل البوكر لديكريد](https://proposals.decred.org/proposals/7a67ed5) (يخطط darthcrypto@ للعودة باقتراح مفصل أكثر).
@@ -372,7 +372,7 @@ BitcoinToYou [تسمح](https://twitter.com/bitcointoyou/status/1291473453812535
 
 [اقترح](https://cointelegraph.com/news/charles-hoskinson-s-iohk-submitted-a-decentralized-treasury-proposal-to-the-ethereum-classic-community) تشارلز هوسكينسون من IOHK و Cardano اقتراحين لتحسين الإيثيريوم كلاسيك ETC، أحدهما لإضافة نقاط تفتيش من شأنها إيقاف عمليات إعادة التنظيم الطويلة، والثاني لإضافة صندوق تطوير يتلقى 20٪ من مكافآت الكتلة. ويبدو اقتراح المكافآت الكتلة مثيراً للجدال في المجتمع، حيث ترفض مختبرات ETC الفكرة.
 
-[ولد](https://medium.com/@yamfinance/yam-finance-d0ad577250c7) توكن YAM و[توفي](https://coingeek.com/defi-strikes-again-yam-protocol-bug-leads-to-750000-loss/) في غشت، واستمرت دورته لمدة 3 أيام، وهو ما يعتبر أسرع حتى بالنسبة لمشروع التمويل اللامركزي DEFI. تم وصف الرمز المميز باعتباره "توكنًا للحوكمة" لبروتوكول YAM، ولكن بمجرد بدء النظام، أصبح من الواضح أنه معطل من الأساس. وقد كانت نافذة قصيرة حيث تم حشد مزارعي YAM للعمل وإنقاذ البروتوكول ولكن كان هناك خطأ في الحل، لذا فقد مات الآن. تمت تغطية YAM لتبرئته من المسؤولية حول كونها تجريبية وغير مراجعة، وتم إنتاجها في فترة عشرة أيام من خلال بخلط بعض العقود الذكية معًا - عد ساعة واحدة من إطلاقها، تم استثمار 76 مليون دولار، ليرتفع إلى 300 مليون دولار في اليوم التالي قبل الإعلان عن الخلل القاتل.
+[ولد](https://medium.com/@yamfinance/yam-finance-d0ad577250c7) توكن YAM و[توفي](https://coingeek.com/defi-strikes-again-yam-protocol-bug-leads-to-750000-loss/) في غشت، واستمرت دورته لمدة 3 أيام، وهو ما يعتبر أسرع حتى بالنسبة لمشروع التمويل اللامركزي DEFI. تم وصف الرمز المميز باعتباره "توكنًا للحوكمة" لبروتوكول YAM، ولكن بمجرد بدء النظام، أصبح من الواضح أنه معطل من الأساس. وقد كانت نافذة قصيرة حيث تم حشد مزارعي YAM للعمل وإنقاذ البروتوكول ولكن كان هناك خطأ في الحل، لذا فقد مات الآن. تمت تغطية YAM لتبرئته من المسؤولية حول كونها تجريبية وغير مراجعة، وتم إنتاجها في فترة عشرة أيام من خلال خلط بعض العقود الذكية معًا - بعد ساعة واحدة من إطلاقها، تم استثمار 76 مليون دولار، ليرتفع إلى 300 مليون دولار في اليوم التالي قبل الإعلان عن الخلل القاتل.
 
 قامت MakerDAO بتنشيط عقد تنفيذي "تعويضي" كان من المفترض أن يرفع سقف WBTC ولكن [بدلاً من ذلك](https://twitter.com/nanexcool/status/1292287024767082496) وضعتها في الصفر. ويبدو أنه لم يحدث أي ضرر في هذه المناسبة غير تأخير توافر المزيد من WBTC.
 
