--- a/journal/202008.md
+++ b/journal/202008.md
@@ -309,7 +309,7 @@ BitcoinToYou [تسمح](https://twitter.com/bitcointoyou/status/1291473453812535
 * مقالات mm@ الجديدة والقديمة متوفرة [باللغة البرتغالية](https://stakey.club/pt/articles/)
 * الديكريد، آلية سوق التعدين - [باللغة الإسبانية](https://territorioblockchain.com/decred-mecanica-del-mercado-minero/) بواسطة territorioblockchain.com
 * مجلة موجز بوليتيا من العدد 33 إلى العدد 35 [إلى العربية](https://insaf01.github.io/politeia-digest-ar/)  بواسطة (arij@ و abdulrahman4@) و [إلى الإسبانية](https://medium.com/decred-es/politeia-digest-spanish/home) بواسطة (pablito@)
-* تمت ترجمة مجلة لشهر غشت 2020 إلى العربية بواسطة (arij@ و abdulrahman4@) والصينية بواسطة (Dominic@) والبرتغالية بواسطة (mm@) والإسبانية بواسطة (francov\_@). أصبحت الترجمة البولندية لشهري ماي و يونيو متاحة الآن. شكرا لكم جميعا.
+* تمت ترجمة مجلة لشهر يوليوز 2020 إلى العربية بواسطة (arij@ و abdulrahman4@) والصينية بواسطة (Dominic@) والبرتغالية بواسطة (mm@) والإسبانية بواسطة (francov\_@). أصبحت الترجمة البولندية لشهري ماي و يونيو متاحة الآن. شكرا لكم جميعا.
 
 في المحتويات الأخرى غير الإنجليزية:
 
